--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -62,6 +62,7 @@ h4 {
   text-align: left;
   font-family: 'Times New Roman', Times, serif;
   font-weight: normal;
+  font-size: 25px;
   margin: 20px;
 }
 
